test/lambda/negative/syntax/missing_brace.ls
// @expect-error: E102
// @description: Missing closing brace in map

let m = { name: "test", age: 30
let y = 1
